tests/Rules/Media/Fixtures/invalid/audio_autoplay_no_controls.html.twig
<audio autoplay src="song.mp3"></audio>
